--- a/index.html
+++ b/index.html
@@ -1,175 +1,195 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Grow a Garden - Chat with Avatars + Replies</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Grow a Garden - Trade & Chat</title>
   <style>
-    body { font-family: Arial; background: #e3f9e5; text-align: center; padding: 20px; }
-    .container { background: white; padding: 30px; border-radius: 12px; max-width: 800px; margin: auto; box-shadow: 0 0 20px rgba(0,0,0,0.1); }
-    .chat-box { margin-top: 20px; max-height: 400px; overflow-y: auto; padding: 10px; background: #f3fff3; border-radius: 10px; border: 1px solid #ccc; text-align: left; }
-    .message { margin-bottom: 15px; background: #d0ffd8; padding: 10px; border-radius: 5px; display: flex; align-items: flex-start; gap: 10px; }
-    .reply { margin-left: 40px; background: #c7f6d6; }
-    .avatar { width: 40px; height: 40px; border-radius: 50%; }
-    textarea { width: 100%; padding: 10px; border-radius: 5px; }
-    button { background-color: #38a169; color: white; padding: 8px 14px; border: none; border-radius: 5px; margin-top: 5px; cursor: pointer; }
-    button:hover { background-color: #2f855a; }
-    .reply-btn { background-color: #4299e1; }
-    .reply-btn:hover { background-color: #2b6cb0; }
-    .reply-box { margin-top: 5px; }
-    .msg-content { flex: 1; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0f4f8;
+      padding: 20px;
+    }
+    #chatBox {
+      width: 100%;
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 10px #ccc;
+    }
+    #messages {
+      max-height: 400px;
+      overflow-y: auto;
+      margin-bottom: 20px;
+    }
+    .message {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 15px;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 10px;
+    }
+    .avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+    .bubble {
+      background: #e0ecff;
+      border-radius: 10px;
+      padding: 10px;
+      max-width: 400px;
+    }
+    .username {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+    #inputForm {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .reply-btn {
+      font-size: 0.8rem;
+      margin-top: 5px;
+      background: #d0d0ff;
+      border: none;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🌱 Grow a Garden - Global Chat + Avatars</h1>
-    <div id="login">
-      <input type="text" id="username" placeholder="Enter your Roblox username">
-      <button onclick="login()">Login</button>
-    </div>
 
-    <div id="chatSection" style="display:none;">
-      <div class="chat-box" id="chatBox"></div>
-      <textarea id="chatInput" placeholder="Type your message..." rows="2"></textarea>
-      <button onclick="sendMessage()">Send Message</button>
-    </div>
-  </div>
+<div id="chatBox">
+  <h2>🌱 Grow a Garden – Trade Chat</h2>
+  <div id="messages"></div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
+  <form id="inputForm">
+    <input type="text" id="username" placeholder="Enter your Roblox username" required>
+    <input type="text" id="messageInput" placeholder="Enter your message..." required>
+    <input type="hidden" id="replyTo">
+    <button type="submit">Send Message</button>
+  </form>
+</div>
 
-  <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyBRDxGLy4EjiOOrPnVv1KhPZlfcdHv1Gqw",
-      authDomain: "growagardentrade-984b8.firebaseapp.com",
-      databaseURL: "https://growagardentrade-984b8-default-rtdb.firebaseio.com",
-      projectId: "growagardentrade-984b8",
-      storageBucket: "growagardentrade-984b8.firebasestorage.app",
-      messagingSenderId: "483682582157",
-      appId: "1:483682582157:web:e32ffb641bf5dd3d08acc4"
+<!-- Firebase -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBRDxGLy4EjiOOrPnVv1KhPZlfcdHv1Gqw",
+    authDomain: "growagardentrade-984b8.firebaseapp.com",
+    databaseURL: "https://growagardentrade-984b8-default-rtdb.firebaseio.com",
+    projectId: "growagardentrade-984b8",
+    storageBucket: "growagardentrade-984b8.appspot.com",
+    messagingSenderId: "483682582157",
+    appId: "1:483682582157:web:e32ffb641bf5dd3d08acc4"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+  const messagesRef = ref(db, 'messages');
+
+  const messagesDiv = document.getElementById('messages');
+  const inputForm = document.getElementById('inputForm');
+  const usernameInput = document.getElementById('username');
+  const messageInput = document.getElementById('messageInput');
+  const replyToInput = document.getElementById('replyTo');
+
+  async function getUserIdFromUsername(username) {
+    const res = await fetch(`https://users.roblox.com/v1/usernames/users`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ usernames: [username], excludeBannedUsers: true })
+    });
+    const data = await res.json();
+    return data.data?.[0]?.id || null;
+  }
+
+  async function getAvatarURL(username) {
+    const userId = await getUserIdFromUsername(username);
+    if (userId) {
+      return `https://www.roblox.com/headshot-thumbnail/image?userId=${userId}&width=150&height=150&format=png`;
+    } else {
+      return "https://tr.rbxcdn.com/3f1cd497b601a476164c10d57450f356/150/150/AvatarHeadshot/Png";
+    }
+  }
+
+  inputForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const username = usernameInput.value.trim();
+    const text = messageInput.value.trim();
+    const replyTo = replyToInput.value.trim();
+
+    if (username && text) {
+      push(messagesRef, {
+        username,
+        text,
+        replyTo: replyTo || null,
+        timestamp: Date.now()
+      });
+      messageInput.value = '';
+      replyToInput.value = '';
+    }
+  });
+
+  onChildAdded(messagesRef, async (data) => {
+    const msg = data.val();
+    const avatarURL = await getAvatarURL(msg.username);
+
+    const msgDiv = document.createElement('div');
+    msgDiv.className = 'message';
+
+    const avatar = document.createElement('img');
+    avatar.src = avatarURL;
+    avatar.className = 'avatar';
+
+    const content = document.createElement('div');
+    content.className = 'bubble';
+
+    const name = document.createElement('div');
+    name.className = 'username';
+    name.textContent = msg.username;
+
+    const text = document.createElement('div');
+    text.textContent = msg.text;
+
+    const replyBtn = document.createElement('button');
+    replyBtn.className = 'reply-btn';
+    replyBtn.textContent = '↩️ Reply';
+    replyBtn.onclick = () => {
+      replyToInput.value = msg.username;
+      messageInput.focus();
+      messageInput.placeholder = `Replying to ${msg.username}...`;
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    let currentUser = "";
-
-    function getAvatarURL(username) {
-      return `https://www.roblox.com/headshot-thumbnail/image?userName=${username}&width=150&height=150&format=png`;
+    content.appendChild(name);
+    if (msg.replyTo) {
+      const replyTo = document.createElement('div');
+      replyTo.style.fontSize = "0.85rem";
+      replyTo.style.color = "gray";
+      replyTo.textContent = `Replying to @${msg.replyTo}`;
+      content.appendChild(replyTo);
     }
+    content.appendChild(text);
+    content.appendChild(replyBtn);
 
-    function login() {
-      const user = document.getElementById("username").value.trim();
-      if (user) {
-        currentUser = user;
-        document.getElementById("login").style.display = "none";
-        document.getElementById("chatSection").style.display = "block";
-        listenForMessages();
-      }
-    }
+    msgDiv.appendChild(avatar);
+    msgDiv.appendChild(content);
+    messagesDiv.appendChild(msgDiv);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  });
+</script>
 
-    function sendMessage() {
-      const input = document.getElementById("chatInput");
-      const msg = input.value.trim();
-      if (!msg) return;
-
-      db.ref("messages").push({
-        user: currentUser,
-        text: msg,
-        timestamp: Date.now()
-      });
-
-      input.value = "";
-    }
-
-    function sendReply(parentKey, replyText) {
-      if (!replyText) return;
-
-      db.ref(`messages/${parentKey}/replies`).push({
-        user: currentUser,
-        text: replyText,
-        timestamp: Date.now()
-      });
-    }
-
-    function listenForMessages() {
-      const chatBox = document.getElementById("chatBox");
-      db.ref("messages").on("value", snapshot => {
-        const messages = snapshot.val();
-        chatBox.innerHTML = "";
-        for (let key in messages) {
-          const msg = messages[key];
-
-          const msgDiv = document.createElement("div");
-          msgDiv.className = "message";
-
-          const avatar = document.createElement("img");
-          avatar.src = getAvatarURL(msg.user);
-          avatar.className = "avatar";
-
-          const msgContent = document.createElement("div");
-          msgContent.className = "msg-content";
-          msgContent.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}`;
-
-          const replyBtn = document.createElement("button");
-          replyBtn.textContent = "Reply";
-          replyBtn.className = "reply-btn";
-          replyBtn.onclick = () => showReplyInput(key, msgDiv);
-
-          msgContent.appendChild(replyBtn);
-          msgDiv.appendChild(avatar);
-          msgDiv.appendChild(msgContent);
-
-          // Replies
-          if (msg.replies) {
-            for (let replyKey in msg.replies) {
-              const reply = msg.replies[replyKey];
-              const replyDiv = document.createElement("div");
-              replyDiv.className = "message reply";
-
-              const replyAvatar = document.createElement("img");
-              replyAvatar.src = getAvatarURL(reply.user);
-              replyAvatar.className = "avatar";
-
-              const replyContent = document.createElement("div");
-              replyContent.className = "msg-content";
-              replyContent.innerHTML = `<strong>${reply.user} (reply):</strong> ${reply.text}`;
-
-              replyDiv.appendChild(replyAvatar);
-              replyDiv.appendChild(replyContent);
-              msgDiv.appendChild(replyDiv);
-            }
-          }
-
-          chatBox.appendChild(msgDiv);
-        }
-
-        chatBox.scrollTop = chatBox.scrollHeight;
-      });
-    }
-
-    function showReplyInput(msgKey, parentDiv) {
-      if (parentDiv.querySelector('.reply-box')) return;
-
-      const replyContainer = document.createElement("div");
-      replyContainer.className = "reply-box";
-
-      const replyInput = document.createElement("textarea");
-      replyInput.placeholder = "Reply to this message...";
-      replyInput.rows = 2;
-      replyInput.style.width = "100%";
-
-      const submitBtn = document.createElement("button");
-      submitBtn.textContent = "Send Reply";
-      submitBtn.onclick = () => {
-        sendReply(msgKey, replyInput.value.trim());
-        listenForMessages();
-      };
-
-      replyContainer.appendChild(replyInput);
-      replyContainer.appendChild(submitBtn);
-      parentDiv.appendChild(replyContainer);
-    }
-  </script>
 </body>
 </html>
